--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -11,11 +11,16 @@
   font-size: 1rem;
   font-weight: 700;
   color: #555;
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  justify-content: center;
 }
 @media screen and (max-width: 800px){
   .login__modal--container {
     left: 50%;
     width: 95%;
+    height: 90%;
     border-radius: 10px;
     z-index: 10;
     background-color: #fff;
@@ -35,7 +40,6 @@
 }
 .modal__form--container {
   padding: 0 2rem;
-  border: 1px solid #123;
 }
 .form__control--input {
   position: relative;
