--- a/src/components/Overlay.css
+++ b/src/components/Overlay.css
@@ -1,6 +1,6 @@
 .overlay {
   position: absolute;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   top: 0;
   right: 0;
