--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,6 +1,6 @@
 .sidebar__container {
   position: absolute;
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
   top: 0;
   left: 0;
@@ -13,7 +13,7 @@
   transition: 0.3s ease-in;
   background: linear-gradient(90deg, #000000, rgb(211, 144, 0));
   background-repeat: no-repeat;
-  background-size: 400% 300%;
+  background-size: 400% 400%;
   color: #fff;
 }
 
@@ -37,7 +37,7 @@
   animation: gradient 1s ease;
 }
 .sidebar__top--container {
-  height: 10vh;
+  /* height: 10vh; */
   width: 100%;
   display: flex;
   justify-content: space-between;
