--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   background:url(./assets/hero-img-2.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   color: rgb(72, 72, 72);
 }
 @media screen and (max-width:600px){
